Improve switchbuttons CSS, reorganize styles/methods

--- a/export/index.html
+++ b/export/index.html
@@ -134,7 +134,7 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
   margin-top: 50%;
 }
 
-/* Small Outlined Divs */
+/* General Styles */
 
 .outlineDiv {
   outline: none;
@@ -149,6 +149,11 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
   background: #000;
 }
 
+.choice-wrapper {
+  display: inline-block;
+  margin: 0.5%;
+}
+
 /* Soul/Skill Info */
 
 .soulInfo {
@@ -157,8 +162,12 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
   position: absolute;
 }
 
-.soul-tip {
+.tophalf-tip {
   width: 500%;
+}
+
+.bottomhalf-tip {
+  width: 40%;
 }
 
 .hoverDiv {
@@ -180,16 +189,6 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
 }
 
 /* --- Skill Buttons */
-
-.skill-wrapper {
-  display: inline-block;
-  width: 23%;
-  margin: 0.5%;
-}
-
-.skill-tip {
-  width: 40%;
-}
 
 .skill-button {
   position: relative;
