Improve switch button UI and soul hovertip stat display

--- a/export/index.html
+++ b/export/index.html
@@ -149,6 +149,11 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
   background: #000;
 }
 
+.noClick {
+  color: #666;
+  background-color: #333;
+}
+
 .choice-wrapper {
   display: inline-block;
   margin: 0.5%;
