More work on map

--- a/export/index.html
+++ b/export/index.html
@@ -634,6 +634,8 @@ const ref = window.vapormall;
 
 console.log(ref);
 
+const map = new window.vapormall.Map();
+
 &lt;&lt;/script&gt;&gt;
 &lt;&lt;/done&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata></tw-storydata>
