Working map generation (initial stage)

--- a/export/index.html
+++ b/export/index.html
@@ -635,6 +635,8 @@ const ref = window.vapormall;
 console.log(ref);
 
 const map = new window.vapormall.Map();
+map.printFloor();
+map.printMap();
 
 &lt;&lt;/script&gt;&gt;
 &lt;&lt;/done&gt;&gt;
