--- a/export/index.html
+++ b/export/index.html
@@ -377,6 +377,7 @@ GENERAL STYLE
   margin: auto;
 
   padding: 10px;
+  font-size: 0.85em;
 }
 
 /*
@@ -452,6 +453,14 @@ hr {
   height: 0px;
   margin: 3px 0;
 }
+
+button {
+  background-color: #000000;
+  border-radius: 10px;
+}
+button:hover {
+  background-color: #005588;
+}
 /* twine-user-stylesheet #5: "TagStyles" */
 .menu #bg {
   filter: blur(0px);
@@ -497,6 +506,46 @@ hr {
 
 .no-overflow .passage {
   overflow: visible;
+}
+/* twine-user-stylesheet #6: "RoomStyle" */
+#status {
+    width: fit-content;
+    height: 7%;
+    padding: 0 5px 0 5px;
+    font-size: 85%;
+}
+
+#menu {
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+    font-size: 85%;
+
+    /* to center absolute div horizontally 
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    */
+}
+
+/* transparent black bg with solid black border */
+.blackBg2 {
+    background-color: rgba(0, 0, 0, 0.6);
+
+    border-radius: 5px;
+    border: 2px solid black;
+}
+
+/* transparent black bg with patterned animated border */
+.blackBg3 {
+    background-color: rgba(0, 0, 0, 0.6);
+
+    border: 1px solid black;
+    border-image-source: url("assets/pattern2.gif");
+    border-image-slice: 50;
+    border-image-repeat: round;
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript">// For accessibility?
 // From https://twinery.org/forum/discussion/comment/4663/
 postrender["addTabindexes"] = function (content) {
@@ -622,8 +671,18 @@ State.variables.time = 1440;
 
 &lt;div id=&quot;screenContents&quot; class=&quot;absoluteAlign&quot;&gt;
     &lt;div id=&quot;tophalf&quot; class=&quot;absoluteAlign&quot;&gt;
+        &lt;div id=&quot;status&quot; class=&quot;blackBg2&quot;&gt;Shirt Suite 2342&lt;/div&gt;
     &lt;/div&gt;
     &lt;div id=&quot;bottomhalf&quot; class=&quot;absoluteAlign blackBg&quot;&gt;
+        &lt;div id=&quot;bottomContent&quot; class=&quot;blackBg2&quot;&gt;
+            The quick brown fox jumps over the lazy dog.&lt;br/&gt;&lt;br/&gt;
+            Exits: north to ASDF, south to dASFDSF.
+        &lt;/div&gt;
+        &lt;div id=&quot;menu&quot; class=&quot;blackBg2&quot;&gt;
+            &lt;button id=&quot;inventory&quot;&gt;Inventory&lt;/button&gt;
+            &lt;button id=&quot;map&quot;&gt;Map&lt;/button&gt;
+            &lt;button id=&quot;party&quot;&gt;Party&lt;/button&gt;
+        &lt;/div&gt;
     &lt;/div&gt;
 &lt;/div&gt;
 
@@ -631,12 +690,7 @@ State.variables.time = 1440;
 &lt;&lt;script&gt;&gt;
 
 const ref = window.vapormall;
-
-console.log(ref);
-
-const map = new window.vapormall.Map();
-map.printFloor();
-map.printMap();
+const map = new window.vapormall.MallMap();
 
 &lt;&lt;/script&gt;&gt;
 &lt;&lt;/done&gt;&gt;
