Basic navigation between rooms done

--- a/export/index.html
+++ b/export/index.html
@@ -659,7 +659,7 @@ ref.Manager.startBattle();
     &lt;div id=&quot;bg&quot;&gt;&lt;/div&gt;
     &lt;div id=&quot;passages&quot;&gt;&lt;/div&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="3" name="StoryInit" tags="" position="275,0" size="100,100">/* For preloading assets*/
-&lt;link rel=&quot;prefetch&quot; href=&quot;assets/final.png&quot;&gt;
+&lt;link rel=&quot;prefetch&quot; href=&quot;assets/vapormall.js&quot;&gt;
 
 /* Initialize variables */
 &lt;&lt;script&gt;&gt;
